// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format[acorn] 1`] = `
"Unexpected token (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: Unexpected token (1:4)"
`;

exports[`snippet: #0 format[babel] 1`] = `
"Unexpected token, expected "(" (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: Unexpected token, expected "(" (1:4)"
`;

exports[`snippet: #0 format[babel] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a = b) = 1
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #0 format[babel-flow] 1`] = `
"Unexpected token, expected "(" (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: Unexpected token, expected "(" (1:4)"
`;

exports[`snippet: #0 format[babel-flow] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a = b) = 1
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #0 format[babel-ts] 1`] = `
"Unexpected token, expected "(" (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: Unexpected token, expected "(" (1:4)"
`;

exports[`snippet: #0 format[babel-ts] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a = b) = 1
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #0 format[espree] 1`] = `
"Unexpected token each (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: Unexpected token each"
`;

exports[`snippet: #0 format[flow] 1`] = `
"Unexpected identifier, expected the token \`(\` (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: Unexpected identifier, expected the token \`(\` (1:4)"
`;

exports[`snippet: #0 format[flow] 2`] = `
"Invalid left-hand side in assignment (1:2)
> 1 | (a = b) = 1
    |  ^
Cause: Invalid left-hand side in assignment (1:1)"
`;

exports[`snippet: #0 format[meriyah] 1`] = `
"Expected '(' (1:5)
> 1 | for each (a in b) {}
    |     ^^^^
Cause: [1:4-1:8]: Expected '('"
`;

exports[`snippet: #0 format[meriyah] 2`] = `
"Invalid left-hand side in assignment (1:9)
> 1 | (a = b) = 1
    |         ^
Cause: [1:8-1:9]: Invalid left-hand side in assignment"
`;

exports[`snippet: #0 format[typescript] 1`] = `
"'(' expected. (1:5)
> 1 | for each (a in b) {}
    |     ^
Cause: '(' expected."
`;

exports[`snippet: #1 format[acorn] 1`] = `
"Unexpected token (1:7)
> 1 | class switch() {}
    |       ^
Cause: Unexpected token (1:6)"
`;

exports[`snippet: #1 format[babel] 1`] = `
"A class name is required. (1:7)
> 1 | class switch() {}
    |       ^
Cause: A class name is required. (1:6)"
`;

exports[`snippet: #1 format[babel] 2`] = `
"Invalid left-hand side in assignment expression. (1:5)
> 1 | a = 1 = 2
    |     ^
Cause: Invalid left-hand side in assignment expression. (1:4)"
`;

exports[`snippet: #1 format[babel-flow] 1`] = `
"A class name is required. (1:7)
> 1 | class switch() {}
    |       ^
Cause: A class name is required. (1:6)"
`;

exports[`snippet: #1 format[babel-flow] 2`] = `
"Invalid left-hand side in assignment expression. (1:5)
> 1 | a = 1 = 2
    |     ^
Cause: Invalid left-hand side in assignment expression. (1:4)"
`;

exports[`snippet: #1 format[babel-ts] 1`] = `
"A class name is required. (1:7)
> 1 | class switch() {}
    |       ^
Cause: A class name is required. (1:6)"
`;

exports[`snippet: #1 format[babel-ts] 2`] = `
"Invalid left-hand side in assignment expression. (1:5)
> 1 | a = 1 = 2
    |     ^
Cause: Invalid left-hand side in assignment expression. (1:4)"
`;

exports[`snippet: #1 format[espree] 1`] = `
"Unexpected token switch (1:7)
> 1 | class switch() {}
    |       ^
Cause: Unexpected token switch"
`;

exports[`snippet: #1 format[flow] 1`] = `
"Unexpected token \`switch\`, expected an identifier (1:7)
> 1 | class switch() {}
    |       ^
Cause: Unexpected token \`switch\`, expected an identifier (1:6)"
`;

exports[`snippet: #1 format[flow] 2`] = `
"Invalid left-hand side in assignment (1:5)
> 1 | a = 1 = 2
    |     ^
Cause: Invalid left-hand side in assignment (1:4)"
`;

exports[`snippet: #1 format[meriyah] 1`] = `
"Unexpected strict mode reserved word (1:7)
> 1 | class switch() {}
    |       ^^^^^^
Cause: [1:6-1:12]: Unexpected strict mode reserved word"
`;

exports[`snippet: #1 format[meriyah] 2`] = `
"Invalid left-hand side in assignment (1:7)
> 1 | a = 1 = 2
    |       ^
Cause: [1:6-1:7]: Invalid left-hand side in assignment"
`;

exports[`snippet: #1 format[typescript] 1`] = `
"'{' expected. (1:7)
> 1 | class switch() {}
    |       ^
Cause: '{' expected."
`;

exports[`snippet: #2 format[acorn] 1`] = `
"Unexpected token (1:13)
> 1 | ({ method() })
    |             ^
Cause: Unexpected token (1:12)"
`;

exports[`snippet: #2 format[babel] 1`] = `
"Unexpected token, expected "{" (1:13)
> 1 | ({ method() })
    |             ^
Cause: Unexpected token, expected "{" (1:12)"
`;

exports[`snippet: #2 format[babel] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a = 1) = 2
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #2 format[babel-flow] 1`] = `
"Unexpected token, expected "{" (1:13)
> 1 | ({ method() })
    |             ^
Cause: Unexpected token, expected "{" (1:12)"
`;

exports[`snippet: #2 format[babel-flow] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a = 1) = 2
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #2 format[babel-ts] 1`] = `
"Unexpected token, expected "{" (1:13)
> 1 | ({ method() })
    |             ^
Cause: Unexpected token, expected "{" (1:12)"
`;

exports[`snippet: #2 format[babel-ts] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a = 1) = 2
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #2 format[espree] 1`] = `
"Unexpected token } (1:13)
> 1 | ({ method() })
    |             ^
Cause: Unexpected token }"
`;

exports[`snippet: #2 format[flow] 1`] = `
"Unexpected token \`}\`, expected the token \`{\` (1:13)
> 1 | ({ method() })
    |             ^
Cause: Unexpected token \`}\`, expected the token \`{\` (1:12)"
`;

exports[`snippet: #2 format[flow] 2`] = `
"Invalid left-hand side in assignment (1:2)
> 1 | (a = 1) = 2
    |  ^
Cause: Invalid left-hand side in assignment (1:1)"
`;

exports[`snippet: #2 format[meriyah] 1`] = `
"Expected '{' (1:13)
> 1 | ({ method() })
    |             ^
Cause: [1:12-1:13]: Expected '{'"
`;

exports[`snippet: #2 format[meriyah] 2`] = `
"Invalid left-hand side in assignment (1:9)
> 1 | (a = 1) = 2
    |         ^
Cause: [1:8-1:9]: Invalid left-hand side in assignment"
`;

exports[`snippet: #2 format[typescript] 1`] = `
"'{' expected. (1:11)
> 1 | ({ method() })
    |           ^
Cause: '{' expected."
`;

exports[`snippet: #3 format[acorn] 1`] = `
"Unexpected token (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: Unexpected token (1:14)"
`;

exports[`snippet: #3 format[babel] 1`] = `
"Unexpected token, expected "{" (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: Unexpected token, expected "{" (1:14)"
`;

exports[`snippet: #3 format[babel] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a += b) = 1
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #3 format[babel-flow] 1`] = `
"Unexpected token, expected "{" (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: Unexpected token, expected "{" (1:14)"
`;

exports[`snippet: #3 format[babel-flow] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a += b) = 1
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #3 format[babel-ts] 1`] = `
"Unexpected token, expected "{" (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: Unexpected token, expected "{" (1:14)"
`;

exports[`snippet: #3 format[babel-ts] 2`] = `
"Invalid parenthesized assignment pattern. (1:1)
> 1 | (a += b) = 1
    | ^
Cause: Invalid parenthesized assignment pattern. (1:0)"
`;

exports[`snippet: #3 format[espree] 1`] = `
"Unexpected token } (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: Unexpected token }"
`;

exports[`snippet: #3 format[flow] 1`] = `
"Unexpected token \`}\`, expected the token \`{\` (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: Unexpected token \`}\`, expected the token \`{\` (1:14)"
`;

exports[`snippet: #3 format[flow] 2`] = `
"Invalid left-hand side in assignment (1:2)
> 1 | (a += b) = 1
    |  ^
Cause: Invalid left-hand side in assignment (1:1)"
`;

exports[`snippet: #3 format[meriyah] 1`] = `
"Expected '{' (1:15)
> 1 | ({ method({}) })
    |               ^
Cause: [1:14-1:15]: Expected '{'"
`;

exports[`snippet: #3 format[meriyah] 2`] = `
"Invalid left-hand side in assignment (1:10)
> 1 | (a += b) = 1
    |          ^
Cause: [1:9-1:10]: Invalid left-hand side in assignment"
`;

exports[`snippet: #3 format[typescript] 1`] = `
"'{' expected. (1:13)
> 1 | ({ method({}) })
    |             ^
Cause: '{' expected."
`;

exports[`snippet: #4 format[acorn] 1`] = `
"Unexpected token (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: Unexpected token (1:22)"
`;

exports[`snippet: #4 format[babel] 1`] = `
"Unexpected token, expected "{" (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: Unexpected token, expected "{" (1:22)"
`;

exports[`snippet: #4 format[babel] 2`] = `
"Invalid left-hand side in assignment expression. (1:2)
> 1 | (a = b) += 1
    |  ^
Cause: Invalid left-hand side in assignment expression. (1:1)"
`;

exports[`snippet: #4 format[babel-flow] 1`] = `
"Unexpected token, expected "{" (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: Unexpected token, expected "{" (1:22)"
`;

exports[`snippet: #4 format[babel-flow] 2`] = `
"Invalid left-hand side in assignment expression. (1:2)
> 1 | (a = b) += 1
    |  ^
Cause: Invalid left-hand side in assignment expression. (1:1)"
`;

exports[`snippet: #4 format[babel-ts] 1`] = `
"Unexpected token, expected "{" (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: Unexpected token, expected "{" (1:22)"
`;

exports[`snippet: #4 format[babel-ts] 2`] = `
"Invalid left-hand side in assignment expression. (1:2)
> 1 | (a = b) += 1
    |  ^
Cause: Invalid left-hand side in assignment expression. (1:1)"
`;

exports[`snippet: #4 format[espree] 1`] = `
"Unexpected token } (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: Unexpected token }"
`;

exports[`snippet: #4 format[flow] 1`] = `
"Unexpected token \`}\`, expected the token \`{\` (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: Unexpected token \`}\`, expected the token \`{\` (1:22)"
`;

exports[`snippet: #4 format[flow] 2`] = `
"Invalid left-hand side in assignment (1:2)
> 1 | (a = b) += 1
    |  ^
Cause: Invalid left-hand side in assignment (1:1)"
`;

exports[`snippet: #4 format[meriyah] 1`] = `
"Expected '{' (1:23)
> 1 | ({ method(parameter,) })
    |                       ^
Cause: [1:22-1:23]: Expected '{'"
`;

exports[`snippet: #4 format[meriyah] 2`] = `
"Invalid left-hand side in assignment (1:9)
> 1 | (a = b) += 1
    |         ^^
Cause: [1:8-1:10]: Invalid left-hand side in assignment"
`;

exports[`snippet: #4 format[typescript] 1`] = `
"'{' expected. (1:21)
> 1 | ({ method(parameter,) })
    |                     ^
Cause: '{' expected."
`;
